Add Material Icons, Move Roboto Font to HTML Link Ref

--- a/endpoints/panel/views/register.ejs
+++ b/endpoints/panel/views/register.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Panel - Register</title>
-    <link href="/static/styles/panel.css" rel="stylesheet">
+    <link href="/static/styles/panel.css" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Roboto:400,500|Roboto+Condensed|Roboto+Mono" rel="stylesheet">
     <style>.error { display: none; }</style>
     <script src="/static/scripts/jquery/3.1.1.js"></script>
     <script>
