--- a/endpoints/panel/views/layout.ejs
+++ b/endpoints/panel/views/layout.ejs
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Panel - <%= title %></title>
     <link href="/static/styles/panel.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500|Roboto+Condensed|Roboto+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="/static/scripts/jquery/3.1.1.js"></script>
 </head>
 <body>
