Change "Name" to "Username" on registration page

--- a/endpoints/panel/views/register.ejs
+++ b/endpoints/panel/views/register.ejs
@@ -73,7 +73,7 @@
 
             <div class="inputs">
                 <form target="" id="form">
-                    <input id="username" type="text" placeholder="Name" required autocomplete="off">
+                    <input id="username" type="text" placeholder="Username" required autocomplete="off">
                     <input id="email" type="email" placeholder="Email" required autocomplete="off">
                     <input id="password" type="password" placeholder="Password" required autocomplete="off">
                     <input id="password2" type="password" placeholder="Confirm Password" required autocomplete="off">
