--- a/static/styles/panel.css
+++ b/static/styles/panel.css
@@ -12,25 +12,49 @@ html, body {
     height: 100%;
 }
 
+h3 {
+    font-weight: 400;
+}
+
 a {
     color: #4B99DE;
     text-decoration: none;
 }
 
+small {
+    color: #555;
+}
+
 pre, code {
     margin: 0;
+    font-family: "SF Mono", "Roboto Mono", Courier, monospace;
+    font-size: 0.9em;
+    color: #FFF;
+    background: #333;
+    line-height: 1.5em;
+}
+
+pre {
+    display: block;
+    padding: 18px 24px;
+    border: 2px solid #2F2F2F;
+    border-radius: 0.2em;
+    margin-bottom: 10px;
+    max-width: 900px;
+    overflow-y: auto;
+}
+
+pre code {
+    background: transparent;
+    border: none;
+    padding: 0;
 }
 
 code {
-    display: block;
-    font-family: "SF Mono", "Roboto Mono", Courier, monospace;
-    font-size: 0.9em;
-    padding: 18px 24px;
-    background: #333;
-    color: #FFF;
     max-height: 600px;
-    line-height: 1.5em;
-    overflow-y: auto;
+    padding: 1px 4px;
+    border: 2px solid #2F2F2F;
+    border-radius: 0.2em;
 }
 
 input:focus,
@@ -146,6 +170,7 @@ select {
 }
 
 .container {
+    background: #EEE;
     display: flex;
     flex-direction: row;
     height: 100%;
@@ -248,11 +273,6 @@ select {
     background: #FAFAFA;
     box-shadow: 0px 4px 13px -2px rgba(0, 0, 0, 0.25);
     overflow-y: auto;
-}
-
-.container .content .main code {
-    border: 2px solid #2F2F2F;
-    border-radius: 0.2em;
 }
 
 .container .content .main input[type=text],
