--- a/static/styles/highlightjs/theme.css
+++ b/static/styles/highlightjs/theme.css
@@ -1,90 +1,71 @@
-/*
-Atom One Dark by Daniel Gamage
-Original One Dark Syntax theme from https://github.com/atom/one-dark-syntax
-base:    #282c34
-mono-1:  #abb2bf
-mono-2:  #818896
-mono-3:  #5c6370
-hue-1:   #56b6c2
-hue-2:   #61aeee
-hue-3:   #c678dd
-hue-4:   #98c379
-hue-5:   #e06c75
-hue-5-2: #be5046
-hue-6:   #d19a66
-hue-6-2: #e6c07b
-*/
+/* http://jmblog.github.com/color-themes-for-google-code-highlightjs */
 
 .hljs {
-    display: block;
-    overflow-x: auto;
+  display: block;
+  overflow-x: auto;
+  color: #4D4D4C;
+  padding: 0.5em;
 }
 
+/* Tomorrow Comment */
 .hljs-comment,
 .hljs-quote {
-    color: #5c6370;
-    font-style: italic;
+  color: #8e908c;
 }
 
-.hljs-doctag,
-.hljs-keyword,
-.hljs-formula {
-    color: #c678dd;
-}
-
-.hljs-section,
-.hljs-name,
-.hljs-selector-tag,
-.hljs-deletion,
-.hljs-subst {
-    color: #e06c75;
-}
-
-.hljs-literal {
-    color: #56b6c2;
-}
-
-.hljs-string,
-.hljs-regexp,
-.hljs-addition,
-.hljs-attribute,
-.hljs-meta-string {
-    color: #98c379;
-}
-
-.hljs-built_in,
-.hljs-class .hljs-title {
-    color: #e6c07b;
-}
-
-.hljs-attr,
+/* Tomorrow Red */
 .hljs-variable,
 .hljs-template-variable,
-.hljs-type,
+.hljs-tag,
+.hljs-name,
+.hljs-selector-id,
 .hljs-selector-class,
-.hljs-selector-attr,
-.hljs-selector-pseudo,
-.hljs-number {
-    color: #d19a66;
+.hljs-regexp,
+.hljs-deletion {
+  color: #c82829;
 }
 
+/* Tomorrow Orange */
+.hljs-number,
+.hljs-built_in,
+.hljs-builtin-name,
+.hljs-literal,
+.hljs-type,
+.hljs-params,
+.hljs-meta,
+.hljs-link {
+  color: #f5871f;
+}
+
+/* Tomorrow Yellow */
+.hljs-attribute {
+  color: #eab700;
+}
+
+/* Tomorrow Green */
+.hljs-string,
 .hljs-symbol,
 .hljs-bullet,
-.hljs-link,
-.hljs-meta,
-.hljs-selector-id,
-.hljs-title {
-    color: #61aeee;
+.hljs-addition {
+  color: #718c00;
+}
+
+/* Tomorrow Blue */
+.hljs-title,
+.hljs-section {
+  color: #4271ae;
+}
+
+/* Tomorrow Purple */
+.hljs-keyword,
+.hljs-selector-tag {
+  color: #8959a8;
 }
 
 .hljs-emphasis {
-    font-style: italic;
+  font-style: italic;
 }
 
 .hljs-strong {
-    font-weight: bold;
-}
-
-.hljs-link {
-    text-decoration: underline;
+  font-weight: bold;
 }
