Add Langs Endpoint to Docs

--- a/endpoints/docs/views/translate.ejs
+++ b/endpoints/docs/views/translate.ejs
@@ -87,7 +87,7 @@
 <br><hr>
 
 <h3>Supported Languages</h3>
-<blockquote>Any of the below values can be used as a valid to/from language. (Case Insensitive)</blockquote>
+<blockquote>Any of the below values can be used as a valid to/from language. (Case Insensitive)<br><br>Alternatively, you can make a GET request to <code>/api/translate/langs</code> to recieve them in a JSON format, similar to the example listed below.</blockquote>
 <pre><code class="hljs json">[
     {
         "name": "Afrikaans",
