Revamp Control Panel, move Generator to Control Panel, Add Restart Button

--- a/endpoints/panel/views/system.ejs
+++ b/endpoints/panel/views/system.ejs
@@ -1,5 +1,52 @@
-Node: <%= node %><br>
-Memory Used: <%= memory %>
-<br><br>
-<a href="">Reload Endpoints</a><br>
-<a href="">Restart Sherlock</a>
+<script>
+$(function() {
+    $("#generate").on("click", function(event) {
+        $.post("/api/regkey", {}, function(data) {
+            console.log(data);
+            if (data.ok) {
+                $("#key").val(data.key);
+                // $("#gen").prop("disabled", true);
+            } else {
+                $("#response").text("Error: " + data.error);
+            }
+        });
+    });
+
+    $("#restart").on("click", function(event) {
+        $("#response").text("Restarting...");
+        $.post("/api/system", { action: "shutdown" }, function(data) {
+            console.log(data);
+            if (data.ok) {
+                setTimeout(function() {
+                    window.location.replace("/panel");
+                }, 3500);
+            } else {
+                $("#response").text(data.error);
+            }
+        });
+    });
+});
+</script>
+
+<span class="title">Node.js Version</span>
+<input type="text" value="<%- node %>" disabled>
+
+<br>
+
+<span class="title">Memory In Use</span>
+<input type="text" value="<%- memory %>" disabled>
+
+<br>
+
+<span class="title">Registration Key</span><br>
+<input id="key" type="text" value="" disabled>
+
+<br>
+
+<button id="reload">Reload Endpoints</button>
+<button id="generate">Generate Registration Key</button>
+<button id="restart">Restart</button>
+
+<br>
+
+<span id="response"></span>
