--- a/endpoints/panel/views/layout.ejs
+++ b/endpoints/panel/views/layout.ejs
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="/static/scripts/jquery/3.1.1.js"></script>
 </head>
-<body>
+<body class="panel">
 
     <div class="container">
         <div class="sidebar">
