Add Favicon & App Manifests

--- a/panel/views/layout.ejs
+++ b/panel/views/layout.ejs
@@ -7,6 +7,12 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500|Roboto+Condensed|Roboto+Mono" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="/static/scripts/jquery/3.1.1.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffb56f">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body class="panel">
 
