Add Logo to Login/Register Pages

--- a/panel/views/login.ejs
+++ b/panel/views/login.ejs
@@ -39,7 +39,7 @@
     <div class="login">
         <div class="box">
             <div class="brand">
-                <span>Sherlock</span>
+                <img src="/static/images/logo2.svg" height="128px">
             </div>
 
             <div class="error">
