--- a/panel/views/register.ejs
+++ b/panel/views/register.ejs
@@ -62,8 +62,8 @@
 
     <div class="login">
         <div class="box">
-            <div class="title">
-                <span>Register</span>
+            <div class="brand">
+                <img src="/static/images/logo2.svg" height="128px">
             </div>
 
             <div class="info" id="result">
